[package]
name = "pmbus"
version = "0.1.7"
authors = ["Bryan Cantrill <bryan@oxide.computer>"]
edition = "2018"
license = "MPL-2.0"

[profile.ci]
inherits = "dev"
debug = false # default true

[build-dependencies]
ron = "0.8"
serde = "1.0.126"
serde_with = "1.10.0"

anyhow = "1.0.31"
convert_case = "0.4"

[dependencies]
num-traits = { version = "0.2.12", default-features = false }
num-derive = "0.3"
libm = "0.2.1"
