[package]
name = "pmbus"
version = "0.1.7"
authors = ["Bryan Cantrill <bryan@oxide.computer>"]
edition = "2018"
license = "MPL-2.0"

[profile.ci]
inherits = "dev"
debug = false # default true

[build-dependencies]
ron = "0.12"
serde = {version = "1", features = ["derive"] }
serde_with = "3"

anyhow = "1"
convert_case = "0.11"

[dependencies]
num-traits = { version = "0.2", default-features = false }
num-derive = "0.4"
libm = "0.2"
